MD Extensions: A11y - Make code snippet more accessible.

Screenshot in Bug.

Bug: 800149
Cq-Include-Trybots: master.tryserver.chromium.linux:closure_compilation
Change-Id: Ic439125d601f66904ec3c5dfb30d71b1a45fec5f
Reviewed-on: https://chromium-review.googlesource.com/884998
Reviewed-by: Devlin <rdevlin.cronin@chromium.org>
Reviewed-by: David Tseng <dtseng@chromium.org>
Commit-Queue: Hector Carmona <hcarmona@chromium.org>
Cr-Commit-Position: refs/heads/master@{#533886}
Former-commit-id: 5e94fbb88e7870ea45ae1d7fcb3349f859f1a0c0